--- a/app/globals.css
+++ b/app/globals.css
@@ -41,6 +41,10 @@
     --badgeCyanBg: #e5f7ff;
     --badgeRubyBg: #ff5a5f30;
     --badgeJadeBg: #e5fff0;
+
+    --prim: #f9f9fb;
+    --sec: #e8e8ec;
+    --tert: #d9d9e0;
   }
 }
 .dark {
@@ -82,6 +86,10 @@
   --badgeCyanBg: #e5f7ff;
   --badgeRubyBg: #ff5a5f30;
   --badgeJadeBg: #e5fff0;
+
+  --prim: #f9f9fb;
+  --sec: #e8e8ec;
+  --tert: #d9d9e0;
 }
 
 .no-visible-scrollbar {
