--- a/app/globals.css
+++ b/app/globals.css
@@ -7,9 +7,13 @@
     --background: #fcfcfc; /* --gray-1: #fcfcfc; */
     --ghost: #fcfcfc95; /* --gray-1: #fcfcfc85; */
 
+    /* !Button */
+    --button: #f9f9fb; /* --gray-1: #f9f9fb; */
+    --buttonHover: #f9f9fb45; /* --gray-1: #f9f9fb45; */
+
     /* ! CARD */
-    --card: #0000000f; /* --gray-a3: #0000000f; */
-    --cardHover: #0000001f; /* --gray-a5: #0000001f; */
+    --card: #00000005; /* --gray-a3: #0000000f; */
+    --cardHover: #00000045; /* --gray-a5: #0000001f; */
 
     /* ! TEXT */
     --fg: #202020; /* --gray-12: #202020; */
@@ -50,11 +54,11 @@
 .dark {
   --background: #111111; /* --gray-1: #202020; */
 
-  --ghost: #11111175; /* --gray-1: #202020; */
+  --ghost: #11111185; /* --gray-1: #202020; */
 
   /* ! CARD */
-  --card: #ffffff12; /* --gray-a3: #ffffff12; */
-  --cardHover: #ffffff22; /* --gray-a5: #ffffff22; */
+  --card: #ffffff05; /* --gray-a3: #ffffff12; */
+  --cardHover: #ffffff45; /* --gray-a5: #ffffff22; */
 
   /* ! foreground */
   --fg: #f0f0f0; /* --gray-12: #f0f0f0; */
